--- a/src/styles/spacing.css
+++ b/src/styles/spacing.css
@@ -40,7 +40,10 @@
 }
 
 /* If a grey container immediately follows a white container */
-.cu-container.bg-white + .cu-container.bg-cu-black-50 {
+.cu-container.bg-white + .cu-container.bg-cu-black-50,
+.cu-container.bg-white + .cu-container.cu-wideimage,
+.cu-container.bg-cu-black-50 + .cu-container.cu-wideimage,
+.cu-column + .cu-container.cu-wideimage {
   @apply mt-6 md:mt-10;
 }
 
